# othello

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: board.rs  main.rs  othello_disk.rs
src/model/: bit_board.rs  board.rs  evaluator.rs  mod.rs  multi_direction.rs
src/model/player/: ai.rs  alpha_beta.rs  mod.rs  random.rs
src/model/player/ai/: mod.rs  random_player.rs
src/model/player/evaluator/: even.rs  mod.rs  strong.rs  weak.rs
src/view/: ddl_builder.rs  mod.rs  othello_disk.rs  play.rs  start.rs
src/view/widget/: indicator.rs  mod.rs  othello_board.rs  othello_disk.rs
src/view_model/: config.rs  mod.rs  state.rs
