[package]
name = "othello"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/othello"
description = "Othello game."

[dependencies]
conrod = {version = "0.57", features = ["winit", "glium"]}
conrod_derive = "0.1"
rand = "0.8.3"
ttf-noto-sans = "0.1.1"
vecmath = "1.0.0"

[features]
default = []

